--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     border: solid black 1px;
     top: 140px;
     left: 460px;
+    z-index: 9;
 }
 .foto2{
     height: 225px;
@@ -63,12 +64,7 @@
     border: solid black 1px;
     top: 385px;
     left: 460px;
-
-
-
-
-
-
+    z-index: 9;
 }
 
 
